--- a/Test/Test/PropertyList.plist
+++ b/Test/Test/PropertyList.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://app2.pgyer.com/1ae97e72e5a765bcbc4a8c838aff5abe.ipa?v=1.1&amp;sign=a1ab2627327bea49b587975b429269f1&amp;t=574517d4&amp;attname=数据请求.ipa</string>
+					<string>https://github.com/tts1988/PrivateTest/blob/master/Test/Test/BYGVigourBox.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
