--- a/Test/Test/PropertyList.plist
+++ b/Test/Test/PropertyList.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/tts1988/PrivateTest/blob/DevelopTest/Test/Test/BYGVigourBox.ipa</string>
+					<string>https://raw.githubusercontent.com/tts1988/PrivateTest/DevelopTest/Test/Test/BYGVigourBox.ipa，https://github.com/tts1988/PrivateTest/blob/DevelopTest/Test/Test/BYGVigourBox.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
